RESOLVED FIXED39774
[Qt] KURLQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39774
Summary [Qt] KURLQt.cpp has coding-style errors
Anders Bakken
Reported 2010-05-26 13:35:00 PDT
WebCore/platform/qt/KURLQt.cpp:21: You should add a blank line after implementation file's own header. [build/include_order] [4] WebCore/platform/qt/KURLQt.cpp:25: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2 in 1 files
Attachments
Patch that fixes the coding style issues (984 bytes, patch)
2010-05-26 14:45 PDT, Anders Bakken
no flags
Patch (1.01 KB, patch)
2010-06-04 20:16 PDT, Anders Bakken
no flags
Anders Bakken
Comment 1 2010-05-26 14:45:03 PDT
Created attachment 57155 [details] Patch that fixes the coding style issues
Petri Ojala
Comment 2 2010-05-26 21:50:27 PDT
QtTriaged
David Levin
Comment 3 2010-05-27 11:14:22 PDT
Comment on attachment 57155 [details] Patch that fixes the coding style issues > No new tests. (OOPS!) Ditto.
Anders Bakken
Comment 4 2010-06-04 20:16:27 PDT
WebKit Commit Bot
Comment 5 2010-06-05 03:27:37 PDT
Comment on attachment 57950 [details] Patch Clearing flags on attachment: 57950 Committed r60746: <http://trac.webkit.org/changeset/60746>
WebKit Commit Bot
Comment 6 2010-06-05 03:27:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.